Add ci pipeline and dependabot config

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "start": "yarn workspace greenlight-client-poc start",
     "build": "yarn workspaces foreach run build && yarn workspace greenlight-client-poc prod",
-    "clean": "yarn workspaces foreach run clean"
+    "clean": "yarn workspaces foreach run clean",
+    "test": "yarn workspaces foreach run test"
   },
   "workspaces": [
     "packages/*",
