--- a/packages/xcloud/package.json
+++ b/packages/xcloud/package.json
@@ -5,14 +5,17 @@
   "main": "dist/index",
   "scripts": {
     "build": "tsc --build",
-    "clean": "rm -rf dist/ && rm -rf *.tsbuildinfo"
+    "clean": "rm -rf dist/ && rm -rf *.tsbuildinfo",
+    "test": "mocha"
   },
   "dependencies": {
     "debug": "^4.3.4"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
+    "@types/mocha": "^10",
     "@types/node": "^18.7.23",
+    "mocha": "^10.0.0",
     "typescript": "^4.8.4"
   }
 }
