--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "private": true,
   "scripts": {
     "start": "cd client-poc && yarn start",
-    "build": "yarn workspaces foreach -v run build && yarn workspace greenlight-client-poc prod",
+    "build": "yarn workspaces foreach -pv run builddeps && yarn workspaces foreach -pv run build && yarn workspace greenlight-client-poc prod",
     "dev": "yarn build && echo \"---[ Starting application output ]--------------\" && cd client-poc && yarn dev",
-    "clean": "yarn workspaces foreach -v run clean",
-    "test": "yarn workspaces foreach -v run test"
+    "clean": "yarn workspaces foreach -pv run clean",
+    "test": "yarn workspaces foreach -pv run test"
   },
   "workspaces": [
     "packages/*",
