--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "yarn build && echo \"---[ Starting application output ]--------------\" && cd client-poc && yarn dev",
     "dev-pcap": "yarn build && echo \"---[ Starting application output ]--------------\" && cd client-pcap && yarn dev",
     "clean": "yarn workspaces foreach -pv run clean",
-    "test": "yarn build && yarn workspaces foreach -pv run test"
+    "test": "yarn build && yarn workspaces foreach -pv run test",
+    "test-pcap": "cd client-pcap && yarn pcaptest"
   },
   "workspaces": [
     "packages/*",
