Add ability to dump frames and added Makefile to generate videos more easily

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 node_modules/
 dist/
+./frames/
 yarn-error.log
 *.tsbuildinfo
 
@@ -9,3 +10,7 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+video.mp4
+video.pcap.mp4
+frames
+audio.pcap.opus
