--- a/packages/gamestreaming/package.json
+++ b/packages/gamestreaming/package.json
@@ -9,7 +9,9 @@
         "test": "mocha -r ts-node/register tests/**.ts tests/**/*.ts"
     },
     "dependencies": {
-        "debug": "^4.3.4"
+        "debug": "^4.3.4",
+        "greenlight-gamestreaming-protocol": "workspace:^",
+        "greenlight-rtp": "workspace:^"
     },
     "devDependencies": {
         "@types/chai": "^4",
@@ -17,7 +19,6 @@
         "@types/mocha": "^10",
         "@types/node": "^18.7.23",
         "chai": "^4.3.6",
-        "greenlight-rtp": "workspace:^",
         "mocha": "^10.1.0",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.4"
