--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "start": "yarn build && cd client-poc && yarn start",
     "start-pcap": "yarn build && cd client-pcap && yarn start",
-    "build": "yarn workspaces foreach -pv run builddeps && yarn workspaces foreach -pv run build && yarn workspace greenlight-client-poc prod",
+    "build": "yarn workspaces foreach -pv run builddeps && yarn workspaces foreach -pv run builddeps2 && yarn workspaces foreach -pv run build && yarn workspace greenlight-client-poc prod",
     "dev": "yarn build && echo \"---[ Starting application output ]--------------\" && cd client-poc && yarn dev",
     "dev-pcap": "yarn build && echo \"---[ Starting application output ]--------------\" && cd client-pcap && yarn dev",
     "clean": "yarn workspaces foreach -pv run clean",
