--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 node_modules/
 dist/
-./frames/
 yarn-error.log
 *.tsbuildinfo
 
@@ -14,4 +13,4 @@ video.mp4
 video.pcap.mp4
 frames
 audio.pcap.opus
-packages/gamestreaming_backup
+gamestreaming_backup
